# computer_graphics_project

./: CMakeLists.txt  README.md
src/: main.cpp
src/shader/: halo.frag  halo.vert  shadow.frag  shadow.vert  sky.frag  sky.vert  solarpanel.frag  solarpanel.vert  sun.frag  sun.vert  terrain.frag  terrain.vert  turbine.frag  turbine.vert
